<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete_text"
        android:icon="@mipmap/ic_delete_search"
        app:showAsAction="always"
        android:title="@string/action_search_text"/>
</menu>